[package]
name = "light-p2p"
version = "0.1.0"
description = "Easy to networking"
authors = ["lers梦貘"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "light_p2p_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vnt = { git = "https://github.com/vnt-dev/vnt", branch = "1.2.x" }
tauri-plugin-store = "2"
thiserror = "2"
anyhow = "1"
whoami = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4.25"
env_logger = "0.11.6"

